--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main {
   background-color: #ffffff;
 }
 
-span {
+detalhe {
   position: relative;
   left: 420px;
   top: -30px;
@@ -94,17 +94,17 @@ h2 {
   font-size: 74px;
   text-align: right;
 }
-.especificaçoes {
+.especificacoes {
   background-color: #ffffff;
   padding: 50px;
 }
 
-.especificaçoes p {
+.especificacoes p {
   font-weight: bold;
   font-size: 20px;
 }
 
-.Vantagens {
+.titulo {
   align-self: center;
 }
 
@@ -113,14 +113,14 @@ h3 {
   margin-bottom: 10px;
 }
 
-.grid {
+.vantagens-item {
   padding: 10px;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 10px;
 }
 
-.grid2 {
+.vantagens-item2 {
   padding: 10px;
   margin-top: 20px;
   display: grid;
@@ -128,7 +128,7 @@ h3 {
   gap: 10px;
 }
 
-.grid3 {
+.vantagens-item3 {
   padding: 10px;
   display: grid;
   grid-template-columns: auto 1fr;
