--- a/style.css
+++ b/style.css
@@ -94,12 +94,12 @@ h2 {
   font-size: 74px;
   text-align: right;
 }
-.especificacoes {
+.vantagens {
   background-color: #ffffff;
   padding: 50px;
 }
 
-.especificacoes p {
+.vantagens p {
   font-weight: bold;
   font-size: 20px;
 }
