--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f7f7f7;
   display: grid;
-  justify-content: center;
+  justify-items: center;
+  gap: 80px;
 }
 
 img {
   max-width: 100%;
+  display: block;
 }
 
 * {
@@ -16,11 +18,10 @@ img {
 
 .logo {
   justify-self: center;
-  padding-top: 60px;
+  padding-top: 80px;
 }
 
 nav {
-  margin-top: 60px;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -31,7 +32,8 @@ nav a {
   text-decoration: none;
   color: #000000;
   background-color: #ffffff;
-  padding: 10px 20px;
+  padding: 15px 30px;
+  border-radius: 4px;
 }
 
 main {
@@ -39,34 +41,36 @@ main {
 }
 
 .conteudo1 {
-  margin-top: 60px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   background-color: #ffffff;
 }
 
-detalhe {
-  position: relative;
-  left: 420px;
-  top: -30px;
-  height: 4px;
+.detalhe {
   width: 60px;
+  height: 4px;
   background-color: #ee2211;
+  position: absolute;
+  top: 30px;
+  right: -30px;
 }
 
 .subconteudo {
   display: grid;
+  position: relative;
   padding: 20px;
-  align-self: center;
+  align-content: center;
+  justify-items: end;
+  text-align: right;
+  gap: 20px;
 }
 
 h1 {
-  padding: 20px;
-  text-align: right;
   font-size: 2.1rem;
 }
 
 .subconteudo p {
+  line-height: 1.3;
   font-size: 20px;
   text-align: right;
   font-weight: bold;
@@ -76,8 +80,6 @@ h1 {
   text-decoration: none;
   color: #f7f7f7;
   background-color: #ee2211;
-  place-self: end;
-  margin-top: 30px;
   padding: 10px 15px;
   border-radius: 4px;
 }
@@ -87,11 +89,15 @@ h1 {
   grid-template-columns: repeat(2, 1fr);
 }
 
+.titulo {
+  align-self: center;
+}
+
 h2 {
+  font-size: 64px;
+  text-transform: uppercase;
   padding: 20px;
-  padding-right: 20px;
   color: #c6c6c6;
-  font-size: 74px;
   text-align: right;
 }
 .vantagens {
@@ -100,12 +106,9 @@ h2 {
 }
 
 .vantagens p {
+  line-height: 1.3;
   font-weight: bold;
   font-size: 20px;
-}
-
-.titulo {
-  align-self: center;
 }
 
 h3 {
@@ -114,31 +117,32 @@ h3 {
 }
 
 .vantagens-item {
-  padding: 10px;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 10px;
 }
 
 .vantagens-item2 {
-  padding: 10px;
-  margin-top: 20px;
   display: grid;
   grid-template-columns: auto 1fr;
+  padding: 10px;
+  margin-top: 20px;
   gap: 10px;
 }
 
 .vantagens-item3 {
-  padding: 10px;
   display: grid;
   grid-template-columns: auto 1fr;
+  padding: 10px;
   gap: 10px;
 }
 
 footer {
+  width: 100%;
   margin-top: 50px;
   text-align: center;
   font-size: 1.2rem;
   background-color: #ffffff;
-  padding: 30px;
+  padding: 40px;
+  box-sizing: border-box;
 }
