--- a/style.css
+++ b/style.css
@@ -16,24 +16,33 @@ img {
   padding: 0px;
 }
 
-.logo {
-  justify-self: center;
-  padding-top: 80px;
+header {
+  margin-top: 70px;
+  display: grid;
+  gap: 70px;
+  justify-items: center;
 }
 
-nav {
+ul {
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
-  justify-content: center;
+}
+
+li {
+  list-style: none;
 }
 
 nav a {
   text-decoration: none;
   color: #000000;
   background-color: #ffffff;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
+  text-transform: uppercase;
+}
+
+nav a:hover {
+  border: 2px solid #e21;
 }
 
 main {
@@ -73,15 +82,18 @@ h1 {
   line-height: 1.3;
   font-size: 20px;
   text-align: right;
-  font-weight: bold;
 }
 
 .botao {
   text-decoration: none;
   color: #f7f7f7;
   background-color: #ee2211;
-  padding: 10px 15px;
+  padding: 1rem 2rem;
   border-radius: 4px;
+}
+
+.botao:hover {
+  background-color: #851107;
 }
 
 .conteudo2 {
@@ -91,6 +103,7 @@ h1 {
 
 .titulo {
   align-self: center;
+  background-image: url(img/onda.svg);
 }
 
 h2 {
@@ -100,6 +113,11 @@ h2 {
   color: #c6c6c6;
   text-align: right;
 }
+
+.vantagens:first-child {
+  background-color: red;
+}
+
 .vantagens {
   background-color: #ffffff;
   padding: 50px;
@@ -117,6 +135,8 @@ h3 {
 }
 
 .vantagens-item {
+  background-color: #f7f7f7;
+  padding: 20px;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 10px;
@@ -131,10 +151,11 @@ h3 {
 }
 
 .vantagens-item3 {
+  background-color: #f7f7f7;
   display: grid;
   grid-template-columns: auto 1fr;
-  padding: 10px;
   gap: 10px;
+  padding: 20px;
 }
 
 footer {
