--- a/style.css
+++ b/style.css
@@ -114,8 +114,8 @@ h2 {
   text-align: right;
 }
 
-.vantagens:first-child {
-  background-color: red;
+.vantagens div:nth-child(odd) {
+  background-color: #f7f7f7;
 }
 
 .vantagens {
@@ -135,7 +135,6 @@ h3 {
 }
 
 .vantagens-item {
-  background-color: #f7f7f7;
   padding: 20px;
   display: grid;
   grid-template-columns: auto 1fr;
@@ -151,7 +150,6 @@ h3 {
 }
 
 .vantagens-item3 {
-  background-color: #f7f7f7;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 10px;
