--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ header {
   justify-items: center;
 }
 
-ul {
+nav ul {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
@@ -33,6 +34,7 @@ li {
 }
 
 nav a {
+  display: block;
   text-decoration: none;
   color: #000000;
   background-color: #ffffff;
@@ -72,7 +74,6 @@ h1::after {
   position: relative;
   padding: 20px;
   align-content: center;
-  justify-items: end;
   text-align: right;
   gap: 20px;
 }
@@ -84,7 +85,6 @@ h1 {
 .subconteudo p {
   line-height: 1.3;
   font-size: 20px;
-  text-align: right;
 }
 
 .botao {
@@ -93,10 +93,17 @@ h1 {
   background-color: #ee2211;
   padding: 1rem 2rem;
   border-radius: 4px;
+  place-self: end;
 }
 
 .botao:hover {
   background-color: #900;
+}
+
+.img1 {
+  height: 100%;
+  object-fit: cover;
+  object-position: top center;
 }
 
 .conteudo2 {
@@ -179,4 +186,55 @@ footer {
   background-color: #ffffff;
   padding: 40px;
   box-sizing: border-box;
+}
+
+@media (max-width: 858px) {
+  h1::after {
+    display: none;
+  }
+}
+
+@media (max-width: 750px) {
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f7f7f7;
+    display: grid;
+    justify-items: center;
+    gap: 20px;
+  }
+
+  .conteudo1 {
+    grid-template-columns: 1fr;
+  }
+
+  h1::after {
+    display: none;
+  }
+
+  h1 {
+    text-align: le;
+  }
+  .subconteudo {
+    text-align: left;
+  }
+
+  .botao {
+    place-self: start;
+  }
+
+  .conteudo2 {
+    grid-template-columns: 1fr;
+  }
+
+  .titulo {
+    padding: 20px;
+  }
+
+  h2 {
+    text-align: center;
+  }
+
+  footer {
+    margin: 0px;
+  }
 }
